Adds reference counter to scripting contexts to prevent premature closure.